[gd_scene load_steps=4 format=3 uid="uid://hvv74un17dp0"]

[ext_resource type="Script" path="res://Scripts/SubComponents/collapsible_field.gd" id="1_j54qh"]
[ext_resource type="Texture2D" uid="uid://cb6n6enqfvclw" path="res://Assets/Icons/arrow_right.svg" id="1_y6ut8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ng6uw"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.275, 0.275, 0.302, 0.25)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="CollapsibleField" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.029
offset_right = 0.5
offset_bottom = 59.0
script = ExtResource("1_j54qh")

[node name="Button" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("1_y6ut8")
alignment = 0

[node name="CollapsibleContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="PanelContainer" type="PanelContainer" parent="CollapsibleContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ng6uw")

[node name="VboxContainer" type="VBoxContainer" parent="CollapsibleContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="FieldContainer" type="VBoxContainer" parent="CollapsibleContainer/PanelContainer/VboxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="AddButton" type="Button" parent="CollapsibleContainer/PanelContainer/VboxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
text = "+"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CollapsibleContainer/PanelContainer/VboxContainer/AddButton" to="." method="_on_add_button_pressed"]
